<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logobe"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <!-- Fondo color salmón -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/backgroundRect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/background_rect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo">

        <!-- Título de Registro -->
        <TextView
            android:id="@+id/tvRegisterTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="INGRESE SUS DATOS"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Campos de entrada -->
        <EditText
            android:id="@+id/etNombres"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/etNombres"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRegisterTitle" />

        <EditText
            android:id="@+id/etApellidos"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/etApellidos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etNombres" />

        <EditText
            android:id="@+id/etDni"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/etDni"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etApellidos" />

        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/etTelefono"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etDni" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/etEmail"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etTelefono" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/etPassword"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEmail" />

        <EditText
            android:id="@+id/etRepeatPassword"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:background="@drawable/edittext_background"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/etRepeatPassword"
            android:inputType="textPassword"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPassword" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edittext_background"
            android:text="Registrar"
            android:textColor="#E57373"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etRepeatPassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>



